--- a/client/iOS/Resources/iplogin/static/css/cs-select.css
+++ b/client/iOS/Resources/iplogin/static/css/cs-select.css
@@ -67,7 +67,7 @@ div.cs-select:focus {
 
 /* Options */
 .cs-select .cs-options {
-	position: absolute;
+	/*position: absolute;*/
 	overflow: hidden;
 	width: 100%;
 	background: #fff;
